--- a/front/html/product.html
+++ b/front/html/product.html
@@ -53,7 +53,7 @@
 
               <div class="item__content__titlePrice">
                 <h1 id="title"><!-- Nom du produit --></h1>
-                <p>Prix : <span id="price"><!-- 42 --></span>€</p>
+                <p>Prix : <span id="price"></span>€</p>
               </div>
 
               <div class="item__content__description">
@@ -111,5 +111,6 @@
       </div>
     </footer>
   <script src="../js/product.js"></script>
+
   </body>
 </html>
